[project]
name = "analyzepp"
version = "0.1.0"
description = "C++ memory leak and performance analyzer powered by Valgrind and Gemini AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.8.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
analyzepp = "analyzepp.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
test = ["pytest>=8"]
lint = ["ruff>=0.11", "mypy>=1.15"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ARG", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
exclude = ["tests/"]
